img overlap and menu fixed at bottom

--- a/source/recources/stylesheet.css
+++ b/source/recources/stylesheet.css
@@ -50,7 +50,7 @@ nav > a:active {
 .container {
     grid-area: container;
     overflow: auto;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .cover-img {
@@ -62,6 +62,7 @@ nav > a:active {
     display: flex;
     align-items: center;
     overflow: hidden;
+    margin-bottom: -10vh;
 }
 
 .cover-img > * {
@@ -104,17 +105,18 @@ nav > a:active {
 }
 
 .padder {
-    height: 20vh;
+    height: 30vh;
 }
 
 @media (max-aspect-ratio: 4/3) {
     .wrapper {
         grid-template-columns: auto;
-        grid-template-areas:
-            'container'
-            'nav';
+        grid-template-areas: 'container';
     }
     .side {
+        position: fixed;
+        width: 100vw;
+        bottom: 0;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
